[workspace]
members = [
    "lib", 
    "."
]

[package]
name = "doc-assert-bin"
version = "0.1.0"
edition = "2021"
description = "Validates markdown API docs against live endpoints, ensuring documentation accuracy."

[dependencies]
doc-assert = { path = "./lib" }
clap = { version = "4.4.18", features = ["derive"]}
tokio = { version = "1.35.1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0" }


[[bin]]
name = "doc-assert"
path = "src/main.rs"