# Copyright 2024 The DocAssert Authors
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[workspace]
members = [
    "lib", 
    "."
]

[package]
name = "doc-assert-bin"
version = "0.1.0"
edition = "2021"
description = "Validates markdown API docs against live endpoints, ensuring documentation accuracy."

[dependencies]
doc-assert = { path = "./lib" }
clap = { version = "4.4.18", features = ["derive"]}
tokio = { version = "1.35.1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0" }


[[bin]]
name = "doc-assert"
path = "src/main.rs"