# Copyright 2024 The DocAssert Authors
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "doc-assert"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/DocAssert/doc-assert"
description = "Validates markdown API docs against live endpoints, ensuring documentation accuracy."
keywords = [
    "documentation",
    "api",
    "validation",
    "testing",
]
categories = [
    "development-tools::testing",
    "command-line-utilities",
    "web-programming",
    "parsing",
    "parser-implementations",
]

[dependencies]
# lib dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.24", features = ["json"] }
regex = "1.10.3"
# bin dependencies
clap = { version = "4.4.18", features = ["derive"], optional = true }
tokio = { version = "1.35.1", features = ["full"], optional = true }

[dev-dependencies]
tokio = { version = "1.35.1", features = ["full"] }
mockito = "1.2.0"

[lib]
name = "doc_assert"
path = "src/lib.rs"

[features]
binary = ["clap", "tokio"]

[[bin]]
name = "doc-assert"
path = "src/main.rs"
required-features = ["binary"]
