[package]
name = "doc-assert"
version = "0.1.0"
edition = "2021"

[dependencies]
markdown = "1.0.0-alpha.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.24", features = ["json"] }
tokio = { version = "1.35.1", features = ["full"] }
mockito = "1.2.0"
regex = "1.10.3"
lazy_static = "1.4.0"
