[package]
name = "doc-assert"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.24", features = ["json"] }
regex = "1.10.3"

[dev-dependencies]
tokio = { version = "1.35.1", features = ["full"] }
mockito = "1.2.0"