[package]
name = "sample-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.32", features = ["serde"] }
rocket = { version = "0.5.0", features = ["json", "uuid"] }
uuid = { version = "1.7.0", features = ["v4"] }
